src/test/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn.stderr
error: defining use generics `[B, A]` differ from previous defining use
  --> $DIR/multiple-def-uses-in-one-fn.rs:10:45
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   |                                             ^^^^^^^^^^^^^^^^^^
   |
note: previous defining use with different generics `[A, B]` found here
  --> $DIR/multiple-def-uses-in-one-fn.rs:10:45
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   |                                             ^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `&'static B: From<&A>` is not satisfied
  --> $DIR/multiple-def-uses-in-one-fn.rs:7:16
   |
LL | type X<A, B> = impl Into<&'static A>;
   |                ^^^^^^^^^^^^^^^^^^^^^ the trait `From<&A>` is not implemented for `&'static B`
   |
   = note: required because of the requirements on the impl of `Into<&'static B>` for `&A`
help: consider introducing a `where` bound, but there might be an alternative better way to express this requirement
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) where &'static B: From<&A> {
   |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: defining use generics `[B, A]` differ from previous defining use
  --> $DIR/multiple-def-uses-in-one-fn.rs:10:1
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: previous defining use with different generics `[A, B]` found here
  --> $DIR/multiple-def-uses-in-one-fn.rs:10:1
   |
LL | fn f<A, B: 'static>(a: &'static A, b: B) -> (X<A, B>, X<B, A>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
